Add database and multipart file upload configuration to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
 spring.application.name=TOEIC-Rise
+
+# Database Configuration
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate properties
+# ddl-auto=none means that Hibernate will not attempt to create or update the database schema.
+# This is useful when you want to manage the schema manually or use a tool like Flyway or Liquibase.
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+# Multipart file upload configuration
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.file-size-threshold=2KB
+
+# Spring AI Configuration for Google Gemini
+#spring.ai.openai.chat.base-url=https://generativelanguage.googleapis.com
+#spring.ai.openai.chat.completions-path=/v1beta/openai/chat/completions
+#spring.ai.openai.api-key=${GOOGLE_API_KEY}
+#spring.ai.openai.chat.options.model=gemini-2.0-flash
