[TOEIC-8][BE] Configuration for Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,6 @@ spring.servlet.multipart.file-size-threshold=2KB
 #spring.ai.openai.chat.completions-path=/v1beta/openai/chat/completions
 #spring.ai.openai.api-key=${GOOGLE_API_KEY}
 #spring.ai.openai.chat.options.model=gemini-2.0-flash
+
+#Swagger
+springdoc.swagger-ui.path=/swagger-ui.html
