--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,20 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.file-size-threshold=2KB
 
+# JWT secret key
+security.jwt.secret-key =${JWT_SECRET_KEY}
+security.jwt.expiration-time=3600000
+
+# Mail properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SUPPORT_EMAIL}
+spring.mail.password=${APP_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 # Spring AI Configuration for Google Gemini
-#spring.ai.openai.chat.base-url=https://generativelanguage.googleapis.com
-#spring.ai.openai.chat.completions-path=/v1beta/openai/chat/completions
-#spring.ai.openai.api-key=${GOOGLE_API_KEY}
-#spring.ai.openai.chat.options.model=gemini-2.0-flash
+spring.ai.openai.chat.base-url=https://generativelanguage.googleapis.com
+spring.ai.openai.chat.completions-path=/v1beta/openai/chat/completions
+spring.ai.openai.api-key=${GOOGLE_API_KEY}
+spring.ai.openai.chat.options.model=gemini-2.0-flash
