--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.servlet.multipart.file-size-threshold=2KB
 # JWT secret key
 security.jwt.secret-key =${JWT_SECRET_KEY}
 security.jwt.expiration-time=3600000
+security.jwt.refresh-token.expiration=86400000
 
 # Mail properties
 spring.mail.host=smtp.gmail.com
