[TOEIC-30] [BE] Auto-delete unverified accounts after 12 hours

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,7 @@ spring.ai.openai.chat.options.model=gemini-2.0-flash
 
 #Swagger
 springdoc.swagger-ui.path=/swagger-ui.html
+
+#Redis
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
