--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,3 +52,10 @@ spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:
 #Redis
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
+
+spring.flyway.locations=classpath:db/migration
+# Enable baseline on migrate to handle existing schema
+# This is useful when the database already has a schema that Flyway did not create.
+spring.flyway.baseline-on-migrate=true
+# Set the baseline version to the current version of the schema
+spring.flyway.baseline-version=0
