feat: OAuth2 Handler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,6 +53,9 @@ spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
 
+#FE Callback URL
+frontend.callback-url=${FRONTEND_CALLBACK_URL}
+
 spring.flyway.locations=classpath:db/migration
 # Enable baseline on migrate to handle existing schema
 # This is useful when the database already has a schema that Flyway did not create.
