--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.file-size-threshold=1MB
 # JWT secret key
 security.jwt.secret-key=${JWT_SECRET_KEY}
 security.jwt.expiration-time=3600000
