--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.file-size-threshold=1MB
 # JWT secret key
 security.jwt.secret-key=${JWT_SECRET_KEY}
-security.jwt.expiration-time=10000
+security.jwt.expiration-time=3600000
 security.jwt.refresh-token.expiration=86400000
 # Mail properties
 spring.mail.host=smtp.gmail.com
