feat: add Chroma Vector Store configuration and dependency

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,7 @@ spring.flyway.baseline-version=0
 cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
 cloudinary.api_key=${CLOUDINARY_API_KEY}
 cloudinary.api_secret=${CLOUDINARY_API_SECRET}
+# Chroma Vector Store Configuration
+spring.ai.vectorstore.chroma.client.host=http://localhost
+spring.ai.vectorstore.chroma.client.port=8000
+spring.ai.vectorstore.chroma.initialize-schema=true
