--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,10 @@
             <artifactId>cloudinary-http44</artifactId>
             <version>1.39.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-vector-store-chroma</artifactId>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
