feat: implement test recommendation and synchronization functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,10 +29,10 @@ spring.mail.password=${APP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # Spring AI Configuration for Google Gemini
-spring.ai.openai.chat.base-url=https://generativelanguage.googleapis.com
-spring.ai.openai.chat.completions-path=/v1beta/openai/chat/completions
+spring.ai.openai.base-url=https://generativelanguage.googleapis.com/v1beta/openai/
 spring.ai.openai.api-key=${GOOGLE_API_KEY}
 spring.ai.openai.chat.options.model=gemini-2.0-flash
+spring.ai.openai.embedding.options.model=text-embedding-004
 #Swagger
 springdoc.swagger-ui.path=/swagger-ui.html
 # OAuth2 Configuration for Google
@@ -59,3 +59,6 @@ cloudinary.api_secret=${CLOUDINARY_API_SECRET}
 spring.ai.vectorstore.chroma.client.host=http://localhost
 spring.ai.vectorstore.chroma.client.port=8000
 spring.ai.vectorstore.chroma.initialize-schema=true
+spring.ai.vectorstore.chroma.tenant-name=TOEIC-Rise
+spring.ai.vectorstore.chroma.database-name=TOEIC-Rise
+spring.ai.vectorstore.chroma.collection-name=toeic-rise-collection
