feat: add asynchronous delete functionality for test records in VectorStoreService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,7 +58,7 @@ cloudinary.api_secret=${CLOUDINARY_API_SECRET}
 # Chroma Vector Store Configuration
 spring.ai.vectorstore.chroma.client.host=http://localhost
 spring.ai.vectorstore.chroma.client.port=8000
-spring.ai.vectorstore.chroma.initialize-schema=true
+spring.ai.vectorstore.chroma.initialize-schema=false
 spring.ai.vectorstore.chroma.tenant-name=TOEIC-Rise
 spring.ai.vectorstore.chroma.database-name=TOEIC-Rise
 spring.ai.vectorstore.chroma.collection-name=toeic-rise-collection
