fix: simplify growth calculation logic in StatisticServiceImpl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,9 @@ spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.file-size-threshold=1MB
 # JWT secret key
 security.jwt.secret-key=${JWT_SECRET_KEY}
+# JWT expiration time in milliseconds (e.g., 3600000 ms = 1 hour)
 security.jwt.expiration-time=3600000
+# Refresh token expiration time in milliseconds (e.g., 86400000 ms = 24 hours)
 security.jwt.refresh-token.expiration=86400000
 # Mail properties
 spring.mail.host=smtp.gmail.com
