feat: update Spring AI configuration for Google GenAI and upgrade spring-ai version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,10 +31,8 @@ spring.mail.password=${APP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # Spring AI Configuration for Google Gemini
-spring.ai.openai.chat.base-url=https://generativelanguage.googleapis.com
-spring.ai.openai.chat.completions-path=/v1beta/openai/chat/completions
-spring.ai.openai.api-key=${GOOGLE_API_KEY}
-spring.ai.openai.chat.options.model=gemini-2.0-flash
+spring.ai.google.genai.api-key=${GOOGLE_API_KEY}
+spring.ai.google.genai.chat.options.model=gemini-2.5-flash
 #Swagger
 springdoc.swagger-ui.path=/swagger-ui.html
 # OAuth2 Configuration for Google
