--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     </scm>
     <properties>
         <java.version>24</java.version>
-        <spring-ai.version>1.0.1</spring-ai.version>
+        <spring-ai.version>1.1.0-M1</spring-ai.version>
     </properties>
     <dependencies>
         <dependency>
@@ -50,10 +50,6 @@
         <dependency>
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-starter-model-chat-memory-repository-jdbc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.ai</groupId>
-            <artifactId>spring-ai-starter-model-openai</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
@@ -168,6 +164,11 @@
             <groupId>com.cloudinary</groupId>
             <artifactId>cloudinary-http44</artifactId>
             <version>1.39.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-starter-model-google-genai</artifactId>
+            <version>1.1.0-M1</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
