--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,11 @@ spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
 #Redis
 spring.data.redis.url=${REDIS_URL}
-#spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.lettuce.pool.max-active=5
+spring.data.redis.lettuce.pool.max-idle=5
+spring.data.redis.lettuce.pool.min-idle=1
+spring.data.redis.lettuce.pool.max-wait=5s
+spring.data.redis.timeout=5s
 #FE Callback URL
 frontend.callback-url=${FRONTEND_CALLBACK_URL}
 spring.flyway.locations=classpath:db/migration
