use sendGrid to send email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,10 +24,10 @@ security.jwt.expiration-time=3600000
 # Refresh token expiration time in milliseconds (e.g., 86400000 ms = 24 hours)
 security.jwt.refresh-token.expiration=86400000
 # Mail properties
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${SUPPORT_EMAIL}
-spring.mail.password=${APP_PASSWORD}
+spring.mail.host=${SPRING_MAIL_HOST}
+spring.mail.port=${SPRING_MAIL_PORT}
+spring.mail.username=${SPRING_MAIL_USERNAME}
+spring.mail.password=${SPRING_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # Spring AI Configuration for Google Gemini
