change to use sendgrid

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,12 +24,9 @@ security.jwt.expiration-time=3600000
 # Refresh token expiration time in milliseconds (e.g., 86400000 ms = 24 hours)
 security.jwt.refresh-token.expiration=86400000
 # Mail properties
-spring.mail.host=${SPRING_MAIL_HOST}
-spring.mail.port=${SPRING_MAIL_PORT}
-spring.mail.username=${SPRING_MAIL_USERNAME}
-spring.mail.password=${SPRING_MAIL_PASSWORD}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.sendgrid.api-key=${SENDGRID_API_KEY}
+sendgrid.from.email=${SENDGRID_EMAIL}
+sendgrid.from.name=${SENDGRID_NAME}
 # Spring AI Configuration for Google Gemini
 spring.ai.google.genai.api-key=${GOOGLE_API_KEY}
 spring.ai.google.genai.chat.options.model=gemini-2.5-flash
