--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,8 +41,8 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
 #Redis
-spring.data.redis.url=${REDIS_URL}
-#spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
 #FE Callback URL
 frontend.callback-url=${FRONTEND_CALLBACK_URL}
 spring.flyway.locations=classpath:db/migration
