--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -55,3 +55,9 @@ spring.flyway.baseline-version=0
 cloudinary.cloud_name=${CLOUDINARY_CLOUD_NAME}
 cloudinary.api_key=${CLOUDINARY_API_KEY}
 cloudinary.api_secret=${CLOUDINARY_API_SECRET}
+#Logginf
+logging.level.root=INFO
+logging.file.name=logs/app-prod.log
+logging.file.max-size=10MB
+logging.file.max-history=14
+
