--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 # Multipart file upload configuration
 spring.servlet.multipart.enabled=true
@@ -43,6 +42,7 @@ spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:
 #Redis
 spring.data.redis.host=${REDIS_HOST}
 spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.repositories.enabled=false
 #FE Callback URL
 frontend.callback-url=${FRONTEND_CALLBACK_URL}
 spring.flyway.locations=classpath:db/migration
