Edit RedisConfiguration to save object in cache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,4 +60,4 @@ logging.level.root=INFO
 logging.file.name=logs/app-prod.log
 logging.file.max-size=10MB
 logging.file.max-history=14
-
+spring.devtools.add-properties=false
